# wearable_device_ML_for_rehabilitation_Edge_Impulse

./: .dockerignore  .gitignore  PIN_LAYOUT.md  README.md  imu_benchmarks_edge_15_07_2026_11_35.csv  imu_benchmarks_edge_16_07_2026_16_47.csv  onboard_session_2026-07-13T08-07-19-670662Z.csv
mobile/imu_rehab_app/: .gitignore  MOBILE_LOG_FIELDS.md  README.md  pubspec.yaml
mobile/imu_rehab_app/android/: build.gradle
mobile/imu_rehab_app/android/app/: build.gradle
mobile/imu_rehab_app/android/app/src/main/: AndroidManifest.xml
mobile/imu_rehab_app/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mobile/imu_rehab_app/android/app/src/main/cpp/edge_impulse_vendor/: README.md
mobile/imu_rehab_app/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
mobile/imu_rehab_app/android/app/src/main/kotlin/com/example/imu_rehab_app/: MainActivity.kt
mobile/imu_rehab_app/android/app/src/main/res/values/: strings.xml
mobile/imu_rehab_app/android/app/src/main/res/xml/: device_filter.xml
mobile/imu_rehab_app/assets/model/: README.md
mobile/imu_rehab_app/lib/: main.dart
mobile/imu_rehab_app/lib/src/: constants.dart
mobile/imu_rehab_app/lib/src/models/: inference_result.dart  pc_api_models.dart  sensor_window.dart
mobile/imu_rehab_app/lib/src/services/: benchmark_logger.dart  ble_sensor_port.dart  clock.dart  edge_impulse_native_engine.dart  inference_engine.dart  pc_api_client.dart  sensor_window_parser.dart  serial_line_decoder.dart  tflite_engine.dart  usb_sensor_port.dart
mobile/imu_rehab_app/lib/src/ui/: rehab_dashboard_page.dart
mobile/imu_rehab_app/test/: benchmark_logger_test.dart  fake_engine_test.dart  pc_api_client_test.dart  pc_api_models_test.dart  sensor_window_parser_test.dart  serial_line_decoder_test.dart
resource/data-collection/: imu_handler.py  main_program.py
resource/data_inference/: data_inference.ino
resource/inference_api/cloud_service/: .env.example  CSC_RAHTI_CPOUTA_DEPLOYMENT.md  Dockerfile  FAQ.md  README.md  __init__.py  __main__.py  app.py  collect_rahti_metrics.ps1  compose.yaml  kubernetes.yaml  requirements.txt  runner.py  smoke_test.py  test_cloud_service.py
resource/inference_api/edge_runner/: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  main.cpp  prepare_model.py  windows_porting.cpp
resource/inference_api/imu_datastream_beetle_rp2530/: imu_datastream_beetle_rp2530.ino
resource/inference_api/imu_datastream_ble/: README.md  imu_datastream_ble.ino
resource/inference_api/imu_datastream_xiao/: imu_datastream_xiao.ino
resource/inference_api/imu_raw_datastream_xiao_ble/: README.md  imu_raw_datastream_xiao_ble.ino
resource/inference_api/pc_client/: README.md  datastream_client.py  edge_runtime.py  imu_source.py  inference_protocol.py  model_backends.py  requirements.txt  test_datastream_client.py  test_runtime_components.py
