cmake_minimum_required(VERSION 3.22)
project(edge_inference_runner LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

get_filename_component(REPO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../.." ABSOLUTE)
set(EI_VENDOR_DIR "${REPO_ROOT}/.ei_model")
if(NOT EXISTS "${EI_VENDOR_DIR}/model-parameters/model_metadata.h")
    message(FATAL_ERROR "Model vendor files are missing. Run prepare_model.py first.")
endif()

add_executable(edge_inference_runner main.cpp windows_porting.cpp)

function(add_ei_source name relative_path)
    get_filename_component(extension "${relative_path}" EXT)
    set(wrapper_dir "${CMAKE_CURRENT_BINARY_DIR}/eiw")
    set(wrapper "${wrapper_dir}/${name}${extension}")
    file(MAKE_DIRECTORY "${wrapper_dir}")
    file(TO_CMAKE_PATH "${EI_VENDOR_DIR}/${relative_path}" include_path)
    file(WRITE "${wrapper}" "#include \"${include_path}\"\n")
    target_sources(edge_inference_runner PRIVATE "${wrapper}")
endfunction()
add_ei_source(model "tflite-model/tflite_learn_738400_38_compiled.cpp")
add_ei_source(common "edge-impulse-sdk/tensorflow/lite/c/common.c")
add_ei_source(error "edge-impulse-sdk/tensorflow/lite/core/api/error_reporter.cpp")
add_ei_source(apicommon "edge-impulse-sdk/tensorflow/lite/core/api/common.cpp")
add_ei_source(flat "edge-impulse-sdk/tensorflow/lite/core/api/flatbuffer_conversions.cpp")
add_ei_source(op "edge-impulse-sdk/tensorflow/lite/core/api/op_resolver.cpp")
add_ei_source(quant "edge-impulse-sdk/tensorflow/lite/kernels/internal/quantization_util.cpp")
add_ei_source(tensorutil "edge-impulse-sdk/tensorflow/lite/kernels/internal/portable_tensor_utils.cpp")
add_ei_source(kutil "edge-impulse-sdk/tensorflow/lite/kernels/kernel_util_lite.cpp")
add_ei_source(conv "edge-impulse-sdk/tensorflow/lite/micro/kernels/conv.cpp")
add_ei_source(convc "edge-impulse-sdk/tensorflow/lite/micro/kernels/conv_common.cpp")
add_ei_source(fc "edge-impulse-sdk/tensorflow/lite/micro/kernels/fully_connected.cpp")
add_ei_source(fcc "edge-impulse-sdk/tensorflow/lite/micro/kernels/fully_connected_common.cpp")
add_ei_source(mutil "edge-impulse-sdk/tensorflow/lite/micro/kernels/kernel_util_micro.cpp")
add_ei_source(mcontext "edge-impulse-sdk/tensorflow/lite/micro/micro_context.cpp")
add_ei_source(mlog "edge-impulse-sdk/tensorflow/lite/micro/micro_log.cpp")
add_ei_source(mutils "edge-impulse-sdk/tensorflow/lite/micro/micro_utils.cpp")
add_ei_source(schema "edge-impulse-sdk/tensorflow/lite/micro/schema_utils.cpp")
add_ei_source(mallocator "edge-impulse-sdk/tensorflow/lite/micro/micro_allocator.cpp")
add_ei_source(fbbridge "edge-impulse-sdk/tensorflow/lite/micro/flatbuffer_conversions_bridge.cpp")
add_ei_source(fbutils "edge-impulse-sdk/tensorflow/lite/micro/flatbuffer_utils.cpp")
add_ei_source(memhelp "edge-impulse-sdk/tensorflow/lite/micro/memory_helpers.cpp")
add_ei_source(allocinfo "edge-impulse-sdk/tensorflow/lite/micro/micro_allocation_info.cpp")
add_ei_source(mgraph "edge-impulse-sdk/tensorflow/lite/micro/micro_graph.cpp")
add_ei_source(merror "edge-impulse-sdk/tensorflow/lite/micro/micro_error_reporter.cpp")
add_ei_source(mresource "edge-impulse-sdk/tensorflow/lite/micro/micro_resource_variable.cpp")
add_ei_source(nonpersist "edge-impulse-sdk/tensorflow/lite/micro/non_persistent_arena_buffer_allocator.cpp")
add_ei_source(persist "edge-impulse-sdk/tensorflow/lite/micro/persistent_arena_buffer_allocator.cpp")
add_ei_source(single "edge-impulse-sdk/tensorflow/lite/micro/single_arena_buffer_allocator.cpp")
add_ei_source(greedy "edge-impulse-sdk/tensorflow/lite/micro/memory_planner/greedy_memory_planner.cpp")
add_ei_source(dspmem "edge-impulse-sdk/dsp/memory.cpp")
add_ei_source(kissfft "edge-impulse-sdk/dsp/kissfft/kiss_fft.cpp")
add_ei_source(kissfftr "edge-impulse-sdk/dsp/kissfft/kiss_fftr.cpp")
add_ei_source(pool "edge-impulse-sdk/tensorflow/lite/micro/kernels/pooling.cpp")
add_ei_source(poolc "edge-impulse-sdk/tensorflow/lite/micro/kernels/pooling_common.cpp")
add_ei_source(reshape "edge-impulse-sdk/tensorflow/lite/micro/kernels/reshape.cpp")
add_ei_source(soft "edge-impulse-sdk/tensorflow/lite/micro/kernels/softmax.cpp")
add_ei_source(softc "edge-impulse-sdk/tensorflow/lite/micro/kernels/softmax_common.cpp")

target_include_directories(edge_inference_runner PRIVATE "${EI_VENDOR_DIR}")
target_compile_definitions(edge_inference_runner PRIVATE
    EI_CLASSIFIER_TFLITE_ENABLE_CMSIS_NN=0
    EI_CLASSIFIER_TFLITE_ENABLE_ESP_NN=0
)

if(MINGW)
    target_link_options(edge_inference_runner PRIVATE -static -static-libgcc -static-libstdc++)
endif()
